--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <meta name="title" content="Anew">
+  <meta name="title" content="anew">
   <meta name="description"
     content="Make changes in our daily lives while imagining a thousand years into the future. anew is a project team that pursues the possibilities to be the good ancestor from a  product sustainability perspective. Having the starting point from consideration of contexts such as environmental crisis, culture, and economy, we research the designs and materials associated with objects. And we create and develop products with lower environmental impact that will be suitable for our future society.">
   <meta name="keywords"
@@ -17,7 +17,7 @@
 
   <link rel="canonical" href="https://anew.studio1014.jp/">
 
-  <title>Anew</title>
+  <title>anew</title>
 </head>
 
 <body>
