--- a/public/index.html
+++ b/public/index.html
@@ -6,18 +6,29 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#33392E" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <meta name="title" content="anew">
+  <meta name="title" content="anew inc. ｜ アニュウインク">
   <meta name="description"
-    content="Make changes in our daily lives while imagining a thousand years into the future. anew is a project team that pursues the possibilities to be the good ancestor from a  product sustainability perspective. Having the starting point from consideration of contexts such as environmental crisis, culture, and economy, we research the designs and materials associated with objects. And we create and develop products with lower environmental impact that will be suitable for our future society.">
-  <meta name="keywords"
-    content="webgl, branding design, development, css, html, react js, scss, gsap, coding, ux/ui design, front-end, web design, web development, phu nguyen, hi991016, creative design, creative dev, art direction, agency, creativ, studio, ux design, storytelling, javascript, animated,typographic, jQuery, responsive">
+    content="anew inc.はプロダクトサステナビリティの観点から「私たちはいかにしてよき祖先となれるか」というグッドアンセスターとしての可能性を追求するプロジェクトチームです。">
+
+  <meta property="og:title" content="anew inc. ｜ アニュウインク">
+  <meta property="og:site_name" content="anew inc. ｜ アニュウインク">
+  <meta property="og:description"
+    content="anew inc.はプロダクトサステナビリティの観点から「私たちはいかにしてよき祖先となれるか」というグッドアンセスターとしての可能性を追求するプロジェクトチームです。">
+  <meta property="og:image" content="%PUBLIC_URL%/ogp.jpg.">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="anew inc. ｜ アニュウインク">
+  <meta name="twitter:title" content="anew inc. ｜ アニュウインク">
+  <meta name="twitter:description"
+    content="anew inc.はプロダクトサステナビリティの観点から「私たちはいかにしてよき祖先となれるか」というグッドアンセスターとしての可能性を追求するプロジェクトチームです。">
+  <meta name="twitter:image:src" content="%PUBLIC_URL%/ogp.jpg">
 
   <link rel="canonical" href="https://anew.studio1014.jp/">
 
-  <title>anew</title>
+  <title>anew inc. ｜ アニュウインク</title>
 </head>
 
 <body>
