--- a/public/index.html
+++ b/public/index.html
@@ -17,14 +17,14 @@
   <meta property="og:site_name" content="anew inc. ｜ アニュウインク">
   <meta property="og:description"
     content="anew inc.はプロダクトサステナビリティの観点から「私たちはいかにしてよき祖先となれるか」というグッドアンセスターとしての可能性を追求するプロジェクトチームです。">
-  <meta property="og:image" content="%PUBLIC_URL%/ogp.jpg.">
+  <meta property="og:image" content="https://anew.studio1014.jp/ogp.jpg">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="anew inc. ｜ アニュウインク">
   <meta name="twitter:title" content="anew inc. ｜ アニュウインク">
   <meta name="twitter:description"
     content="anew inc.はプロダクトサステナビリティの観点から「私たちはいかにしてよき祖先となれるか」というグッドアンセスターとしての可能性を追求するプロジェクトチームです。">
-  <meta name="twitter:image:src" content="%PUBLIC_URL%/ogp.jpg">
+  <meta name="twitter:image:src" content="https://anew.studio1014.jp/ogp.jpg">
 
   <link rel="canonical" href="https://anew.studio1014.jp/">
 
